log
Thu, Mar 20, 2025  5:19:26 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Thu, Mar 20, 2025  5:54:31 PM: 
 exercises.c | 26 ++++++++++++++++++++++++--
 1 file changed, 24 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:81:25: error: comparison between pointer and integer [-Werror]
       if (elem_eleminar == elem)
                         ^~
exercises.c: In function 'copia_pila':
exercises.c:99:13: error: unused variable 'elemento' [-Werror=unused-variable]
       void* elemento = top(P1);
             ^~~~~~~~
exercises.c:97:11: error: unused variable 'pila_aux' [-Werror=unused-variable]
    Stack* pila_aux =create_stack();
           ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
056c3f7
Thu, Mar 20, 2025  5:56:07 PM: 
 exercises.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
test.c: In function 'test_suma_lista':
test.c:100:17: error: implicit declaration of function 'sumaLista' [-Werror=implicit-function-declaration]
     int suma2 = sumaLista(L);
                 ^~~~~~~~~
test.c: In function 'test_elimina_elemento':
test.c:132:5: error: implicit declaration of function 'eliminaElementos' [-Werror=implicit-function-declaration]
     eliminaElementos(L, elem);
     ^~~~~~~~~~~~~~~~
test.c: In function 'test_copia_pila':
test.c:175:5: error: implicit declaration of function 'copia_pila' [-Werror=implicit-function-declaration]
     copia_pila(P1, P2);
     ^~~~~~~~~~
test.c: In function 'test_parentesis_balanceados':
test.c:217:9: error: implicit declaration of function 'parentesisBalanceados' [-Werror=implicit-function-declaration]
     if(!parentesisBalanceados(s)){
         ^~~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e4c78e3
Thu, Mar 20, 2025  5:58:02 PM: 
 exercises.c | 15 +++++++--------
 1 file changed, 7 insertions(+), 8 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:81:25: error: comparison between pointer and integer [-Werror]
       if (elem_eleminar == elem)
                         ^~
exercises.c: In function 'copia_pila':
exercises.c:99:13: error: unused variable 'elemento' [-Werror=unused-variable]
       void* elemento = top(P1);
             ^~~~~~~~
exercises.c:97:11: error: unused variable 'pila_aux' [-Werror=unused-variable]
    Stack* pila_aux =create_stack();
           ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
8f2a3bb
